[tool.poetry]
name = "ch2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
polars = "^1.4.1"
matplotlib = "^3.9.2"
numpy = "^2.0.1"
scikit-learn = "^1.5.1"
ipykernel = "^6.29.5"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
